# space_invaders

./: Cargo.toml  README.md  assets_copyrights.md
assets/: spritesheet.ron
config/: bindings.ron  display.ron  game.ron
src/: config.rs  main.rs  state.rs
src/components/: alien.rs  bullet.rs  mod.rs  ship.rs
src/entities/: alien.rs  bullet.rs  camera.rs  mod.rs  ship.rs
src/resources/: bullet.rs  mod.rs
src/systems/: alien.rs  bullet.rs  bullet_collision.rs  mod.rs  ship.rs
