[package]
name = "space_invaders"
version = "0.1.0"
authors = ["MikDeragon <mikaelderagon@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
lazy_static = "*"
serde = "*"
serde_derive = "*"
rand = "*"

[dependencies.amethyst]
version = "0.15"
features = ["metal"]

